# gpioCoreOS-RealTimeOS

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  whiteCoreOS.c
.backups/: CMakeLists.txt  CMakeLists.txt2
.backups/src/: CMakeLists.txt  main.c
librarys/blink/: CMakeLists.txt  blink.c  blink.h
librarys/lcd1602_i2c_lib/: CMakeLists.txt  lcd1602_i2c.c  lcd1602_i2c.h
librarys/ssd1306_i2c_lib/: CMakeLists.txt  ssd1306_i2c.c  ssd1306_i2c.h
